# kiseki

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: 1002815.npy  1035116.npy
kiseki/: __init__.py  api.py  cli.py  compare.py  core.py  sample.bvh  visualize.py
motion_viz/: __init__.py  api.py  cli.py  core.py  visualize.py
